force-app/main/default/objects/EDU_Applications__c/EDU_Applications__c.object-meta.xml
<CustomObject>
    <label>EDU Film Spark Application</label>
    <nameField>
        <label>EDU Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EDU Film Spark Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>