force-app/main/default/objects/EDU_Applications__c/fields/Additional_Colleagues__c.field-meta.xml
<CustomField>
    <fullName>Additional_Colleagues__c</fullName>
    <label>Additional Colleagues</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>