force-app/main/default/objects/EDU_Applications__c/fields/Film_Spark_Application_name__c.field-meta.xml
<CustomField>
    <fullName>Film_Spark_Application_name__c</fullName>
    <formula>School_Name__c</formula>
    <label>Film Spark Application Name</label>
    <type>Text</type>
</CustomField>