force-app/main/default/objects/EDU_Applications__c/fields/Grades_Taught__c.field-meta.xml
<CustomField>
    <fullName>Grades_Taught__c</fullName>
    <label>Grades Taught</label>
    <type>TextArea</type>
</CustomField>