force-app/main/default/objects/EDU_Applications__c/fields/Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Name__c</fullName>
    <label>Principal Name</label>
    <type>TextArea</type>
</CustomField>