force-app/main/default/objects/EDU_Applications__c/fields/Receive_EDU_Newletter__c.field-meta.xml
<CustomField>
    <fullName>Receive_EDU_Newletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive EDU Newletter</label>
    <type>Checkbox</type>
</CustomField>