force-app/main/default/objects/EDU_Applications__c/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <label>School District</label>
    <type>TextArea</type>
</CustomField>