force-app/main/default/objects/EDU_Applications__c/fields/Selected_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Selected_Workshop__c</fullName>
    <label>Selected Workshop</label>
    <length>100</length>
    <type>Text</type>
</CustomField>