force-app/main/default/objects/EDU_Applications__c/fields/Subject_s_Taught__c.field-meta.xml
<CustomField>
    <fullName>Subject_s_Taught__c</fullName>
    <label>Subject(s) Taught</label>
    <type>TextArea</type>
</CustomField>