force-app/main/default/objects/EDU_Applications__c/listViews/Salt_Lake_City.listView-meta.xml
<ListView>
    <fullName>Salt_Lake_City</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>School_Name__c</columns>
    <columns>Selected_Workshop__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Selected_Workshop__c</field>
        <operation>contains</operation>
        <value>Salt Lake City</value>
    </filters>
    <label>Salt Lake City March 2nd</label>
</ListView>